syntax = "proto3";

message empty {
}


message getReq {
	string key = 1;
}

message putReq {
	string key = 1;
	string value = 2;
}

message reqStatus {
    int32 status = 1;
}

service kv_store {
	rpc get (getReq) returns (reqStatus) {};
	rpc put (putReq) returns (reqStatus) {};
    rpc ack (empty) returns (empty) {};
}



message getResp {
    int32 status = 1;
    string value = 2;
}

message putResp {
    int32 status = 1;
    string old_value = 2;
}

message respStatus {
    int32 status = 1;
}

service KVResponse {
    rpc sendGetResp (getResp) returns (respStatus) {};
    rpc sendPutResp (putResp) returns (respStatus) {};
}
